--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ],
     "license": "MIT",
     "scripts": {
-        "build": "tsup"
+        "build": "tsup",
+        "test": "bun test --coverage --coverage-reporter=lcov"
     }
 }
