--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "url": "https://github.com/ragaeeb/blumbaben.git"
     },
     "module": "./dist/index.js",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
@@ -17,24 +17,26 @@
         "dist"
     ],
     "devDependencies": {
-        "@eslint/js": "^9.30.1",
-        "@types/bun": "^1.2.17",
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
-        "eslint": "^9.30.1",
-        "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-perfectionist": "^4.15.0",
-        "eslint-plugin-prettier": "^5.5.1",
-        "eslint-plugin-react": "^7.37.5",
-        "globals": "^16.3.0",
-        "prettier": "^3.6.2",
-        "semantic-release": "^24.2.6",
+        "@chromatic-com/storybook": "^4.1.1",
+        "@storybook/addon-a11y": "^9.1.7",
+        "@storybook/addon-docs": "^9.1.7",
+        "@storybook/addon-vitest": "^9.1.7",
+        "@storybook/react-vite": "^9.1.7",
+        "@types/bun": "^1.2.22",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
+        "@biomejs/biome": "^2.2.4",
+        "semantic-release": "^24.2.8",
+        "storybook": "^9.1.7",
         "tsup": "^8.5.0",
-        "typescript-eslint": "^8.35.1"
+        "vitest": "^3.2.4",
+        "@vitest/browser": "^3.2.4",
+        "playwright": "^1.55.0",
+        "@vitest/coverage-v8": "^3.2.4"
     },
     "peerDependencies": {
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
     },
     "type": "module",
     "bugs": {
@@ -53,6 +55,10 @@
     "license": "MIT",
     "scripts": {
         "build": "tsup",
-        "test": "bun test --coverage --coverage-reporter=lcov"
+        "test": "bun test --coverage --coverage-reporter=lcov",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "lint": "biome lint src .storybook",
+        "format": "biome format --write src .storybook"
     }
 }
