chore: add testing helpers and tsdown build

--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
         "@storybook/addon-docs": "^9.1.7",
         "@storybook/addon-vitest": "^9.1.7",
         "@storybook/react-vite": "^9.1.7",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/react": "file:tools/testing-library-react",
         "@types/bun": "^1.2.22",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
         "@biomejs/biome": "^2.2.4",
+        "@vitest/browser": "^3.2.4",
+        "@vitest/coverage-v8": "^3.2.4",
+        "playwright": "^1.55.0",
         "semantic-release": "^24.2.8",
         "storybook": "^9.1.7",
-        "tsup": "^8.5.0",
-        "vitest": "^3.2.4",
-        "@vitest/browser": "^3.2.4",
-        "playwright": "^1.55.0",
-        "@vitest/coverage-v8": "^3.2.4"
+        "tsdown": "file:tools/tsdown",
+        "vitest": "^3.2.4"
     },
     "peerDependencies": {
         "react": "^19.1.1",
@@ -54,8 +57,8 @@
     ],
     "license": "MIT",
     "scripts": {
-        "build": "tsup",
-        "test": "bun test --coverage --coverage-reporter=lcov",
+        "build": "bun tools/tsdown/bin/tsdown.ts",
+        "test": "bun x vitest run",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "lint": "biome lint src .storybook",
