--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
               run: bun run build
 
             - name: Test
-              run: bun run test
+              run: bun run test --coverage --coverage-reporter=lcov
 
             - name: Upload results to Codecov
               uses: codecov/codecov-action@v5
