--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,11 @@ jobs:
                   fetch-depth: 0
                   persist-credentials: true
 
+            - name: Set up Node.js
+              uses: actions/setup-node@v6
+              with:
+                  node-version: '24'
+
             - name: Set up Bun
               uses: oven-sh/setup-bun@v2
               with:
