--- a/biome.json
+++ b/biome.json
@@ -1,19 +1,82 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+    "$schema": "https://biomejs.dev/schemas/latest/schema.json",
+    "assist": {
+        "actions": {
+            "source": {
+                "organizeImports": "on",
+                "useSortedKeys": {
+                    "level": "on",
+                    "options": { "sortOrder": "natural" }
+                }
+            }
+        }
+    },
+    "files": {
+        "ignoreUnknown": true,
+        "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
+    },
     "formatter": {
+        "enabled": true,
         "indentStyle": "space",
         "indentWidth": 4,
-        "lineWidth": 100
+        "lineWidth": 120
     },
     "javascript": {
         "formatter": {
-            "quoteStyle": "single"
+            "arrowParentheses": "always",
+            "bracketSameLine": false,
+            "bracketSpacing": true,
+            "expand": "never",
+            "quoteStyle": "single",
+            "semicolons": "always",
+            "trailingCommas": "all"
         }
     },
     "linter": {
+        "domains": {
+            "next": "recommended",
+            "react": "recommended"
+        },
         "enabled": true,
         "rules": {
-            "recommended": true
+            "complexity": {
+                "noExcessiveCognitiveComplexity": "warn",
+                "useWhile": "error"
+            },
+            "nursery": {
+                "useSortedClasses": {
+                    "fix": "safe",
+                    "level": "error",
+                    "options": {
+                        "attributes": ["className"],
+                        "functions": ["cn", "cva", "tw", "clsx"]
+                    }
+                }
+            },
+            "recommended": true,
+            "style": {
+                "noNonNullAssertion": "off",
+                "useBlockStatements": {
+                    "fix": "safe",
+                    "level": "error",
+                    "options": {}
+                },
+                "useTemplate": {
+                    "fix": "safe",
+                    "level": "warn",
+                    "options": {}
+                }
+            },
+            "suspicious": {
+                "noExplicitAny": "off",
+                "noUnknownAtRules": "off",
+                "useIterableCallbackReturn": "off"
+            }
         }
+    },
+    "vcs": {
+        "clientKind": "git",
+        "enabled": true,
+        "useIgnoreFile": true
     }
 }
