--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-    "name": "blumbaben",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/ragaeeb/blumbaben.git"
+    "bugs": {
+        "url": "https://github.com/ragaeeb/blumbaben/issues"
     },
-    "module": "./dist/index.js",
-    "version": "1.0.2",
-    "types": "./dist/index.d.ts",
+    "description": "A lightweight TypeScript React hook to show a toolbar when an input is focused.",
+    "devDependencies": {
+        "@biomejs/biome": "^2.3.10",
+        "@chromatic-com/storybook": "^4.1.3",
+        "@storybook/addon-a11y": "^10.1.10",
+        "@storybook/addon-docs": "^10.1.10",
+        "@storybook/addon-vitest": "^10.1.10",
+        "@storybook/react-vite": "^10.1.10",
+        "@types/bun": "^1.3.5",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
+        "@vitest/browser": "^4.0.16",
+        "@vitest/coverage-v8": "^4.0.16",
+        "playwright": "^1.57.0",
+        "semantic-release": "^25.0.2",
+        "storybook": "^10.1.10",
+        "tsdown": "^0.18.3",
+        "vitest": "^4.0.16"
+    },
+    "engines": {
+        "bun": ">=1.3.5",
+        "node": ">= 24.0.0"
+    },
     "exports": {
         ".": {
             "import": "./dist/index.js",
@@ -16,33 +34,6 @@
     "files": [
         "dist"
     ],
-    "devDependencies": {
-        "@chromatic-com/storybook": "^4.1.1",
-        "@storybook/addon-a11y": "^9.1.7",
-        "@storybook/addon-docs": "^9.1.7",
-        "@storybook/addon-vitest": "^9.1.7",
-        "@storybook/react-vite": "^9.1.7",
-        "@types/bun": "^1.2.22",
-        "@types/react": "^19.1.13",
-        "@types/react-dom": "^19.1.9",
-        "@biomejs/biome": "^2.2.4",
-        "semantic-release": "^24.2.8",
-        "storybook": "^9.1.7",
-        "tsup": "^8.5.0",
-        "vitest": "^3.2.4",
-        "@vitest/browser": "^3.2.4",
-        "playwright": "^1.55.0",
-        "@vitest/coverage-v8": "^3.2.4"
-    },
-    "peerDependencies": {
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1"
-    },
-    "type": "module",
-    "bugs": {
-        "url": "https://github.com/ragaeeb/blumbaben/issues"
-    },
-    "description": "A lightweight TypeScript React hook to show a toolbar when an input is focused.",
     "homepage": "https://github.com/ragaeeb/blumbaben",
     "keywords": [
         "textarea",
@@ -53,12 +44,25 @@
         "formatting"
     ],
     "license": "MIT",
+    "module": "./dist/index.js",
+    "name": "blumbaben",
+    "packageManager": "bun@1.3.5",
+    "peerDependencies": {
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ragaeeb/blumbaben.git"
+    },
     "scripts": {
-        "build": "tsup",
-        "test": "bun test --coverage --coverage-reporter=lcov",
-        "storybook": "storybook dev -p 6006",
+        "build": "tsdown",
         "build-storybook": "storybook build",
+        "format": "biome format --write src .storybook",
         "lint": "biome lint src .storybook",
-        "format": "biome format --write src .storybook"
-    }
+        "storybook": "storybook dev -p 6006"
+    },
+    "type": "module",
+    "types": "./dist/index.d.ts",
+    "version": "1.0.2"
 }
