--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     },
     "exports": {
         ".": {
-            "import": "./dist/index.js",
-            "types": "./dist/index.d.ts"
+            "import": "./dist/index.mjs",
+            "types": "./dist/index.d.mts"
         }
     },
     "files": [
@@ -44,7 +44,7 @@
         "formatting"
     ],
     "license": "MIT",
-    "module": "./dist/index.js",
+    "module": "./dist/index.mjs",
     "name": "blumbaben",
     "packageManager": "bun@1.3.5",
     "peerDependencies": {
@@ -63,6 +63,6 @@
         "storybook": "storybook dev -p 6006"
     },
     "type": "module",
-    "types": "./dist/index.d.ts",
+    "types": "./dist/index.d.mts",
     "version": "1.0.2"
 }
